k8s/employee-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1           # Maximum extra pods during update
      maxUnavailable: 0     # Maximum unavailable pods during update
  selector:
    matchLabels:
      app: employee-app
  template:
    metadata:
      labels:
        app: employee-app
    spec:
      containers:
        - name: employee-app
          image: saurabhnagp/employee-app-image:v5
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
